<resources>
    <string name="app_name">Jarvis Access Control</string>
    <string name="settings">Settings</string>
    <string name="registration_code">Kd2GjNVgNK-A-FdyDlB</string>
    <string name="location">preference_location</string>
    <string name="space">&#160;</string>

    <string name="preferences_notifications">ENABLE_NOTIFICATIONS</string>
    <string name="preferences_security">ENABLE_SECURITY</string>
    <string name="preferences_millis">MILLIS</string>

    <string name="preferences_active_access_key_name">ACTIVE_ACCESS_KEY_NAME</string>
    <string name="preferences_active_access_key">ACTIVE_ACCESS_KEY</string>
    <string name="preferences_active_location">ACTIVE_LOCATION</string>
    <string name="preferences_device_access_keys">DEVICE_ACCESS_KEYS</string>
    <string name="preferences_active_boom_music">ACTIVE BOOM MUSIC</string>
    <string name="preferences_boom_music">BOOM_MUSIC</string>
    <string name="preferences_weather_integration">INTEGRATION_WEATHER</string>
    <string name="preferences_gmail_integration">INTEGRATION_GMAIL</string>
    <string name="preferences_calendar_integration">INTEGRATION_CALENDAR</string>
    <string name="preferences_ifttt_integration">INTEGRATION_IFTTT</string>

    <string name="inline_preferences_title">MGenio</string>

    <string name="summary_notifications_preference">Receive notifications when the door unlocks
    </string>
    <string name="title_notifications_preference">Enable Notifications</string>

    <string name="summary_security_preference">Require either fingerprint or pin to access app
    </string>
    <string name="title_security_preference">Enable Security</string>

    <string name="dialog_title_edittext_preference">Relay Set Time</string>
    <string name="summary_edittext_preference">The number of milliseconds to keep the doorunlocked
    </string>
    <string name="title_edittext_preference">Milliseconds</string>

    <string name="nav_add_access_key">Add New Access Key</string>
    <string name="nav_view_all_pins">View All Pins</string>
    <string name="nav_view_all_cards">View All Cards</string>
    <string name="nav_manage_access_keys">Manage Access Keys</string>
    <string name="nav_boom_music">Boom Music</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="shortcutOpenDoorDisabledMessage">Disabled</string>
    <string name="shortcutOpenDoorLongLabel">Would you like to open the door?</string>
    <string name="shortcutOpenDoorShortLabel">Open Door</string>

    <string name="shortcutCreatePinDisabledMessage">Disabled</string>
    <string name="shortcutCreatePinLongLabel">Would you like to create a pin?</string>
    <string name="shortcutCreatePinShortLabel">Create Pin</string>

    <string name="shortcutAddCardDisabledMessage">Disabled</string>
    <string name="shortcutAddCardLongLabel">Would you like to provision a new card?</string>
    <string name="shortcutAddCardShortLabel">Add Card</string>

    <string-array name="types">
        <item>Admin</item>
        <item>User</item>
    </string-array>
</resources>
